--- a/HOME/home.css
+++ b/HOME/home.css
@@ -4,16 +4,16 @@ font-family: 'Times New Roman', Times, serif;}
 
 body{
 background-color: #000000;
-width: 100%;
-height: 100%;
+width: 100vw;
+height: 50vw;
     position: static;
 }
 
 #outer{
 
     
-    width: 100%;
-    height: 90%;
+    width: 100vw;
+    height: 40vw;
     
     position: absolute;
 right: 0%;
@@ -39,7 +39,7 @@ font-style: oblique;
 .position
 {
 position: absolute;
-left: 15%;
+left: 15vw;
 
 }
 
@@ -57,8 +57,8 @@ font-family: serif;
 div.relative{
 
     position: absolute;
-left: 45%;
-top: 92%;
+left: 45vw;
+top: 44vw;
 
 
 
@@ -69,7 +69,7 @@ top: 92%;
 {
 position: absolute;
 top: 20%;
-right: 1%;
+right: 10vw;
 
 }
 
@@ -77,7 +77,7 @@ right: 1%;
 
 position: absolute;
 top: 16%;
-left: 1%;
+left: 5vw;
 
 
 }
@@ -94,9 +94,9 @@ left: 1%;
     text-align: center;
     text-shadow:2px 2px 4px #FEA336;
     text-decoration: double;
-    width: 40%;
-    height: 30%;
-    bottom: 25%;
-    left: 30%;
+    width: 40vw;
+    height: 10vw;
+    bottom:20vw;
+    left: 28vw;
 
 }
