--- a/module2-solution/style.css
+++ b/module2-solution/style.css
@@ -32,12 +32,14 @@ text-align: center;
 position: absolute;
 top: 150px;
     width: 30%;
-    height: 240px;
+    height: 250px;
     
     margin-left: 4%;
     margin-right: 2%;
     border: 2px solid black;
     background-color: gray;
+    padding: 5px;
+
 
 
 }
@@ -47,11 +49,12 @@ position: absolute;
 top: 150px;
 left: 33%;
     width: 30%;
-    height: 240px;
+    height: 250px;
     margin-left: 2%;
     margin-right: 2%;
     border: 2px solid black;
     background-color: gray;
+    padding: 5px;
 
 }
 
@@ -62,17 +65,19 @@ top: 150px;
 left: 64%;
 
     width: 30%;
-    height: 240px;
+    height: 250px;
     margin-left: 2%;
     margin-right: 2%;
     border: 2px solid black;
     background-color: gray;
+    padding: 5px;
 
 }
 #divinside1{
 
 position: absolute;
-border: solid black;
+border-left: 2px solid black;
+border-bottom:2px solid black ;
 background-color: pink;
 width: 150px;
 height: 40px;
@@ -84,7 +89,8 @@ text-align: center;
 #divinside2{
 
     position: absolute;
-    border: solid black;
+    border-left: 2px solid black;
+    border-bottom:2px solid black ;
     background-color: rgb(114, 27, 42);
     width: 150px;
     height: 40px;
@@ -97,7 +103,8 @@ right: 0%;
     #divinside3{
 
         position: absolute;
-        border: solid black;
+        border-left: 2px solid black;
+        border-bottom:2px solid black ;
         background-color: rgb(242, 255, 62);
         width: 150px;
         height: 40px;
@@ -166,10 +173,12 @@ margin-top: 5px;}
     position: absolute;
     top: 150px;
         width: 46%;
-        height: auto;
+        height: 320px;
         
         margin-left: 2%;
         margin-right: 2%;
+        margin-bottom: 4px;
+        padding: 5px;
         border: 2px solid black;
         background-color: gray;
     
@@ -181,9 +190,11 @@ margin-top: 5px;}
     top: 150px;
     left: 50%;
         width: 46%;
-        height: auto;
+        height: 320px;
         margin-left: 2%;
         margin-right: 2%;
+        margin-bottom: 1%;
+        padding: 5px;
         border: 2px solid black;
         background-color: gray;
     
@@ -196,17 +207,20 @@ margin-top: 5px;}
     left: 0%;
     
         width: 96%;
-        height: auto;
+        height: 300px;
         margin-left: 2%;
         margin-right: 2%;
+        margin-top: 1%;
         border: 2px solid black;
         background-color: gray;
+        padding: 5px;
     
     }
     #divinside1{
     
     position: absolute;
-    border: solid black;
+    border-left: 2px solid black;
+border-bottom:2px solid black ;
     background-color: pink;
     width: 150px;
     height: 40px;
@@ -218,7 +232,8 @@ margin-top: 5px;}
     #divinside2{
     
         position: absolute;
-        border: solid black;
+        border-left: 2px solid black;
+border-bottom:2px solid black ;
         background-color: rgb(114, 27, 42);
         width: 150px;
         height: 40px;
@@ -231,7 +246,8 @@ margin-top: 5px;}
         #divinside3{
     
             position: absolute;
-            border: solid black;
+            border-left: 2px solid black;
+            border-bottom:2px solid black ;
             background-color: rgb(242, 255, 62);
             width: 150px;
             height: 40px;
@@ -294,11 +310,13 @@ margin-top: 5px;}
     
     #div1{
     position: absolute;
-    top: 150px;
+    top: 50%;
         width: 80%;
-        height: auto;
-        
+        height: 250px;
+        padding: 5px;
         margin-left: 10%;
+        margin-top: 12%;
+        margin-bottom: 5%;
         border: 2px solid black;
         background-color: gray;
     
@@ -307,10 +325,15 @@ margin-top: 5px;}
     
     #div2{
     position: absolute;
-    top: 450px;
-    left: 10%;
+    top: 350px;
+    margin-left: 10%;
+    margin-top: 5%;
+    margin-bottom: 5%;
         width: 80%;
-        height: auto;
+        height: 250px;
+        padding: 5px;
+        padding-bottom: 5%;
+
         
         border: 2px solid black;
         background-color: gray;
@@ -320,11 +343,14 @@ margin-top: 5px;}
     #div3{
     
     position: absolute;
-    top: 750px;
-    left: 10%;
+    top: 620px;
+    margin-left: 10%;
+    margin-top: 5%;
     
         width: 80%;
-        height: auto;
+        height: 250px;
+        padding: 5px;
+
         
         border: 2px solid black;
         background-color: gray;
@@ -333,7 +359,8 @@ margin-top: 5px;}
     #divinside1{
     
     position: absolute;
-    border: solid black;
+    border-left: 2px solid black;
+border-bottom:2px solid black ;
     background-color: pink;
     width: 150px;
     height: 40px;
@@ -345,7 +372,8 @@ margin-top: 5px;}
     #divinside2{
     
         position: absolute;
-        border: solid black;
+        border-left: 2px solid black;
+border-bottom:2px solid black ;
         background-color: rgb(114, 27, 42);
         width: 150px;
         height: 40px;
@@ -358,7 +386,8 @@ margin-top: 5px;}
         #divinside3{
     
             position: absolute;
-            border: solid black;
+            border-left: 2px solid black;
+            border-bottom:2px solid black ;
             background-color: rgb(242, 255, 62);
             width: 150px;
             height: 40px;
@@ -371,7 +400,7 @@ margin-top: 5px;}
     
             p{
     
-                font-size: 25px;
+                font-size: 20px;
                 
                 
     
