--- a/module2-solution/style.css
+++ b/module2-solution/style.css
@@ -309,14 +309,14 @@ border-bottom:2px solid black ;
     }
     
     #div1{
-    position: absolute;
+    position: relative;
     top: 50%;
         width: 80%;
-        height: 250px;
+        height: auto;
         padding: 5px;
         margin-left: 10%;
-        margin-top: 12%;
-        margin-bottom: 5%;
+        margin-top: 10%;
+        
         border: 2px solid black;
         background-color: gray;
     
@@ -324,13 +324,13 @@ border-bottom:2px solid black ;
     }
     
     #div2{
-    position: absolute;
-    top: 350px;
+    position: relative;
+    
     margin-left: 10%;
-    margin-top: 5%;
-    margin-bottom: 5%;
+    margin-top: 10%;
+    
         width: 80%;
-        height: 250px;
+        height: auto;
         padding: 5px;
         padding-bottom: 5%;
 
@@ -342,13 +342,13 @@ border-bottom:2px solid black ;
     
     #div3{
     
-    position: absolute;
-    top: 620px;
+    position: relative;
+    
     margin-left: 10%;
-    margin-top: 5%;
+    margin-top: 10%;
     
         width: 80%;
-        height: 250px;
+        height: auto;
         padding: 5px;
 
         
